--- a/angular.json
+++ b/angular.json
@@ -25,14 +25,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "../node-modules/font-awesone/css/font-awesome.css",
-              "../node-modules/materialize-css/dist/css/materialize.css"
+              "src/styles.css"
             ],
-            "scripts": [
-              "../node-modules/jquery/dist/jquery.js",
-              "../node-modules/materialize-css/dist/js/materialize.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -95,6 +90,13 @@
               "src/styles.css"
             ],
             "scripts": []
+          }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "version": 2,
+            "browserTarget": "PW-Online-Shop:build:production"
           }
         }
       }
